add_library(calculators_static STATIC
        accuracy.cpp
        ace.cpp
        bergerparker.cpp
        boneh.cpp
        bootstrap.cpp
        bstick.cpp
        calculator.cpp
        canberra.cpp
        chao1.cpp
        coverage.cpp
        diversityutils.cpp
        eachgapdist.cpp
        eachgapignore.cpp
        efron.cpp
        erarefaction.cpp
        f1score.cpp
        fdr.cpp
        fn.cpp
        fp.cpp
        fpfn.cpp
        geom.cpp
        goodscoverage.cpp
        gower.cpp
        hamming.cpp
        heip.cpp
        hellinger.cpp
        igabundance.cpp
        ignoregaps.cpp
        igrarefaction.cpp
        invsimpson.cpp
        jackknife.cpp
        kimura.cpp
        kmerdist.cpp
        lnabundance.cpp
        lnrarefaction.cpp
        lnshift.cpp
        logsd.cpp
        lsabundance.cpp
        lsrarefaction.cpp
        manhattan.cpp
        mcc.cpp
        memchi2.cpp
        memchord.cpp
        memeuclidean.cpp
        mempearson.cpp
        metroig.cpp
        metrolognormal.cpp
        metrologstudent.cpp
        metrosichel.cpp
        npshannon.cpp
        npv.cpp
        odum.cpp
        onegapdist.cpp
        onegapignore.cpp
        parsimony.cpp
        ppv.cpp
        prng.cpp
        qstat.cpp
        sensitivity.cpp
        shannon.cpp
        shannoneven.cpp
        shannonrange.cpp
        sharedace.cpp
        sharedanderbergs.cpp
        sharedbraycurtis.cpp
        sharedchao1.cpp
        sharedjabund.cpp
        sharedjackknife.cpp
        sharedjclass.cpp
        sharedjest.cpp
        sharedjsd.cpp
        sharedkstest.cpp
        sharedkulczynskicody.cpp
        sharedkulczynski.cpp
        sharedlennon.cpp
        sharedmarczewski.cpp
        sharedmorisitahorn.cpp
        sharedochiai.cpp
        sharedrjsd.cpp
        sharedsobscollectsummary.cpp
        sharedsobs.cpp
        sharedsorabund.cpp
        sharedsorclass.cpp
        sharedsorest.cpp
        sharedthetan.cpp
        sharedthetayc.cpp
        shen.cpp
        siabundance.cpp
        simpson.cpp
        simpsoneven.cpp
        sirarefaction.cpp
        sishift.cpp
        smithwilson.cpp
        soergel.cpp
        solow.cpp
        spearman.cpp
        speciesprofile.cpp
        specificity.cpp
        structchi2.cpp
        structchord.cpp
        structeuclidean.cpp
        structkulczynski.cpp
        structpearson.cpp
        tn.cpp
        tp.cpp
        tptn.cpp
        unweighted.cpp
        uvest.cpp
        weighted.cpp
        whittaker.cpp
)
