add_library(commands_static STATIC
        aligncheckcommand.cpp
        aligncommand.cpp
        alignmusclecommand.cpp
        amovacommand.cpp
        anosimcommand.cpp
        binsequencecommand.cpp
        biominfocommand.cpp
        chimerabellerophoncommand.cpp
        chimeraccodecommand.cpp
        chimeracheckcommand.cpp
        chimeraperseuscommand.cpp
        chimerapintailcommand.cpp
        chimeraslayercommand.cpp
        chimerauchimecommand.cpp
        chimeravsearchcommand.cpp
        chopseqscommand.cpp
        classifyotucommand.cpp
        classifyseqscommand.cpp
        classifysvmsharedcommand.cpp
        classifytreecommand.cpp
        clearcutcommand.cpp
        clustercommand.cpp
        clusterdoturcommand.cpp
        clusterfitcommand.cpp
        clusterfragmentscommand.cpp
        clustersplitcommand.cpp
        collectcommand.cpp
        collectsharedcommand.cpp
        consensusseqscommand.cpp
        cooccurrencecommand.cpp
        corraxescommand.cpp
        countgroupscommand.cpp
        countseqscommand.cpp
        createdatabasecommand.cpp
        degapseqscommand.cpp
        deuniqueseqscommand.cpp
        deuniquetreecommand.cpp
        distancecommand.cpp
        distsharedcommand.cpp
        diversityestimatorcommand.cpp
        fastaqinfocommand.cpp
        filterseqscommand.cpp
        filtersharedcommand.cpp
        getcoremicrobiomecommand.cpp
        getcurrentcommand.cpp
        getdistscommand.cpp
        getgroupcommand.cpp
        getgroupscommand.cpp
        getlabelcommand.cpp
        getlineagecommand.cpp
        getlistcountcommand.cpp
        getmetacommunitycommand.cpp
        getmimarkspackagecommand.cpp
        getoturepcommand.cpp
        getotuscommand.cpp
        getrabundcommand.cpp
        getrelabundcommand.cpp
        getsabundcommand.cpp
        getseqscommand.cpp
        getsharedotucommand.cpp
        heatmapcommand.cpp
        heatmapsimcommand.cpp
        helpcommand.cpp
        homovacommand.cpp
        indicatorcommand.cpp
        kruskalwalliscommand.cpp
        lefsecommand.cpp
        libshuffcommand.cpp
        listotuscommand.cpp
        listseqscommand.cpp
        makebiomcommand.cpp
        makeclrcommand.cpp
        makecontigscommand.cpp
        makefastqcommand.cpp
        makefilecommand.cpp
        makegroupcommand.cpp
        makelefsecommand.cpp
        makelookupcommand.cpp
        makesharedcommand.cpp
        mantelcommand.cpp
        mergecountcommand.cpp
        mergefilecommand.cpp
        mergegroupscommand.cpp
        mergeotuscommand.cpp
        mergesfffilecommand.cpp
        mergetaxsummarycommand.cpp
        metastatscommand.cpp
        mgclustercommand.cpp
        mimarksattributescommand.cpp
        newcommandtemplate.cpp
        nmdscommand.cpp
        nocommands.cpp
        normalizesharedcommand.cpp
        otuassociationcommand.cpp
        otuhierarchycommand.cpp
        pairwiseseqscommand.cpp
        parsimonycommand.cpp
        pcacommand.cpp
        pcoacommand.cpp
        pcrseqscommand.cpp
        phylodiversitycommand.cpp
        phylotypecommand.cpp
        preclustercommand.cpp
        primerdesigncommand.cpp
        quitcommand.cpp
        rarefactcommand.cpp
        rarefactsharedcommand.cpp
        removedistscommand.cpp
        removegroupscommand.cpp
        removelineagecommand.cpp
        removeotuscommand.cpp
        removerarecommand.cpp
        removeseqscommand.cpp
        renamefilecommand.cpp
        renameseqscommand.cpp
        reversecommand.cpp
        screenseqscommand.cpp
        sensspeccommand.cpp
        seqerrorcommand.cpp
        seqsummarycommand.cpp
        setcurrentcommand.cpp
        setdircommand.cpp
        setlogfilecommand.cpp
        setseedcommand.cpp
        sffinfocommand.cpp
        sffmultiplecommand.cpp
        shhhercommand.cpp
        shhhseqscommand.cpp
        sortseqscommand.cpp
        sparcccommand.cpp
        splitabundcommand.cpp
        splitgroupscommand.cpp
        sracommand.cpp
        srainfocommand.cpp
        subsamplecommand.cpp
        summarycommand.cpp
        summaryqualcommand.cpp
        summarysharedcommand.cpp
        summarytaxcommand.cpp
        systemcommand.cpp
        translateseqscommand.cpp
        treesharedcommand.cpp
        trimflowscommand.cpp
        trimseqscommand.cpp
        unifracunweightedcommand.cpp
        unifracweightedcommand.cpp
        uniqueseqscommand.cpp
        venncommand.cpp
)

target_link_libraries(commands_static
        datastructures_static
        mothur_static
        read_static
        svm_static
        communitytype_static
        classifier_static
        chimera_static
        calculators_static
)
