add_library(datastructures_static STATIC
        alignmentcell.cpp
        alignment.cpp
        alignmentdb.cpp
        aminoacid.cpp
        biom.cpp
        biomhdf5.cpp
        biomsimple.cpp
        contigsreport.cpp
        counttable.cpp
        designmap.cpp
        distancedb.cpp
        fastamap.cpp
        fastqread.cpp
        filefile.cpp
        flowdata.cpp
        fullmatrix.cpp
        groupmap.cpp
        kmeralign.cpp
        kmer.cpp
        kmerdb.cpp
        listvector.cpp
        nameassignment.cpp
        oligos.cpp
        optiblastmatrix.cpp
        optidata.cpp
        optidb.cpp
        optimatrix.cpp
        optirefmatrix.cpp
        ordervector.cpp
        picrust.cpp
        protein.cpp
        proteindb.cpp
        qualityscores.cpp
        rabundfloatvector.cpp
        rabundvector.cpp
        report.cpp
        sabundvector.cpp
        sequencecountparser.cpp
        sequence.cpp
        sequencedb.cpp
        sequenceparser.cpp
        sffheader.cpp
        sffread.cpp
        sharedclrvector.cpp
        sharedclrvectors.cpp
        sharedlistvector.cpp
        sharedordervector.cpp
        sharedrabundfloatvector.cpp
        sharedrabundfloatvectors.cpp
        sharedrabundvector.cpp
        sharedrabundvectors.cpp
        sparsedistancematrix.cpp
        sparsematrix.cpp
        suffixdb.cpp
        suffixnodes.cpp
        suffixtree.cpp
        taxonomy.cpp
        tree.cpp
        treemap.cpp
        treenode.cpp
)
